# quantforge

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  PLAN.md  README.md  RESEARCH_NOTES.md  mypy.ini  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  research_direction.md
.github/workflows/: ci.yml  docs.yml
configs/: ml_meta_label.yaml  multi_strategy_blend.yaml  pairs_etf.yaml  tsmom_baseline.yaml  xsmom_sp500.yaml
docs/: conf.py  index.rst
docs/adr/: ADR-001-python-311-uv.md  ADR-002-survivorship-bias.md  ADR-003-ledoit-wolf-vs-oas.md  ADR-004-no-cvxpy.md  ADR-005-dsr-as-headline.md  ADR-006-mypy-strict-pragmatism.md
docs/api/: backtest.rst  data.rst  execution.rst  features.rst  metrics.rst  portfolio.rst  reporting.rst  risk.rst  signals.rst
docs/methodology/: 01_returns_and_features.md  02_signal_construction.md  03_portfolio_construction.md  04_backtesting_methodology.md  05_validation_and_overfitting.md  06_risk_and_attribution.md
quantforge/: __init__.py  cli.py  config.py  constants.py  logging.py
quantforge/backtest/: __init__.py  cpcv.py  engine.py  portfolio_state.py  walk_forward.py
quantforge/data/: __init__.py  loaders.py  quality.py  storage.py  universe.py
quantforge/execution/: __init__.py  costs.py  fills.py  slippage.py
quantforge/features/: __init__.py  cross_sectional.py  labeling.py  microstructure.py  returns.py  technical.py
quantforge/metrics/: __init__.py  attribution.py  factor_exposure.py  performance.py  psr.py
quantforge/portfolio/: __init__.py  base.py  black_litterman.py  constraints.py  equal_weight.py  hrp.py  mvo.py  risk_parity.py
quantforge/reporting/: __init__.py  tearsheet.py
quantforge/reporting/templates/: tearsheet.html.j2
quantforge/risk/: __init__.py  cvar.py  drawdown.py  sizing.py  stress.py  var.py
quantforge/signals/: __init__.py  base.py  carry.py  mean_reversion.py  ml_signal.py  pairs.py  quality.py  tsmom.py  xsmom.py
reports/: headline_summary.json  headline_tearsheet.html
scripts/: download_data.py  generate_headline.py  reproduce_all.sh
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/property/: test_property_allocators.py  test_property_metrics.py  test_property_no_lookahead.py
tests/unit/: test_attribution.py  test_backtest_engine.py  test_config.py  test_costs.py  test_cpcv.py  test_cross_sectional.py  test_execution_extra.py  test_hrp.py  test_labeling.py  test_loaders.py  test_mean_reversion.py  test_metrics.py  test_metrics_extra.py  test_microstructure.py  test_pairs_cointegrated.py  test_portfolio.py  test_portfolio_extra.py  test_quality_audit.py  test_reporting.py  test_returns.py  test_risk_extras.py  test_signals.py  test_signals_extra.py  test_storage_universe.py  test_technical.py  test_var.py
