[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "quantforge"
version = "0.1.0"
description = "Production-grade systematic trading research platform: factor models, HRP/risk-parity allocation, event-driven backtests, CPCV validation, deflated Sharpe."
authors = [{ name = "Timothy A. Zhu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
  "quantitative-finance",
  "algorithmic-trading",
  "backtesting",
  "portfolio-optimization",
  "factor-investing",
  "risk-management",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "numpy>=1.26,<2.1",
  "pandas>=2.1,<2.3",
  "scipy>=1.11,<1.14",
  "statsmodels>=0.14,<0.15",
  "scikit-learn>=1.4,<1.6",
  "lightgbm>=4.3,<5.0",
  "pyarrow>=15.0,<18.0",
  "duckdb>=0.10,<1.2",
  "numba>=0.59,<0.61",
  "cvxpy>=1.5,<1.6",
  "yfinance>=0.2.40,<0.3",
  "pandas-datareader>=0.10,<0.11",
  "plotly>=5.20,<6.0",
  "jinja2>=3.1,<4.0",
  "typer>=0.12,<0.13",
  "pydantic>=2.6,<3.0",
  "pyyaml>=6.0,<7.0",
  "joblib>=1.4,<2.0",
  "tqdm>=4.66,<5.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<6.0",
  "pytest-xdist>=3.5,<4.0",
  "hypothesis>=6.100,<7.0",
  "ruff>=0.4,<0.7",
  "black>=24.3,<25.0",
  "isort>=5.13,<6.0",
  "mypy>=1.9,<2.0",
  "pre-commit>=3.7,<4.0",
  "nbstripout>=0.7,<0.8",
  "types-PyYAML",
  "pandas-stubs",
]
docs = [
  "sphinx>=7.2,<8.0",
  "sphinx-autodoc-typehints>=2.0,<3.0",
  "furo>=2024.1,<2025.0",
  "myst-parser>=2.0,<3.0",
]
pdf = [
  "weasyprint>=62.0,<64.0",
  "kaleido==0.2.1",
]

[project.scripts]
quantforge = "quantforge.cli:app"

[project.urls]
Homepage = "https://github.com/Timothy-ZZZZ-bit/quantforge"
Documentation = "https://Timothy-ZZZZ-bit.github.io/quantforge"
Repository = "https://github.com/Timothy-ZZZZ-bit/quantforge"

[tool.hatch.build.targets.wheel]
packages = ["quantforge"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "network: marks tests that hit the network",
  "integration: marks integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:google",
]

[tool.coverage.run]
source = ["quantforge"]
branch = true
omit = [
  "quantforge/reporting/templates/*",
  "quantforge/cli.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
